# claude-code-command-center

./: .auto-merge-test.md  .gitignore  CLAUDE.md  README.md
.agents_workspace/: DECISION_LOG.md  gamify-roundtable-ui.md
.agents_workspace/architecture/setup/: ARCHITECTURE.md
.agents_workspace/archive/: decision-log.md
.agents_workspace/planning/: SKELETON.md
.agents_workspace/planning/v1/: SKELETON.md
.github/: dependabot.yml
.github/workflows/: ci.yml  extension.yml  python.yml  release-extension.yml
apps/claude-component-browser/: CLAUDE.md  README.md  app.js  index.html  pyproject.toml  server.py  styles.css
apps/cross-repo-file-diff/: CLAUDE.md  README.md  index.html
apps/multi-repo-plan-runner/: CLAUDE.md  README.md
apps/multi-repo-workspace/: .gitignore  CLAUDE.md  README.md  pyproject.toml
apps/multi-repo-workspace/examples/: README.md  roundtable.json
apps/multi-repo-workspace/examples/sample-repos/api-service/: README.md
apps/multi-repo-workspace/examples/sample-repos/api-service/.agents_workspace/planning/: add-health-endpoint.md
apps/multi-repo-workspace/examples/sample-repos/web-app/: README.md
apps/multi-repo-workspace/roundtable/: __init__.py  __main__.py  cli.py  costs.py  executor.py  frontmatter.py  gitinfo.py  gitwrite.py  locks.py  plans.py  registry.py  rounds.py  server.py  sessions.py  tracker.py
apps/multi-repo-workspace/roundtable/schema/: roundtable.schema.json
apps/multi-repo-workspace/roundtable/static/: index.html
apps/multi-repo-workspace/roundtable/static/css/: base.css  components.css  tokens.css
apps/multi-repo-workspace/roundtable/static/js/: api.js  app.js  board.js  diff.js  history.js  markdown.js  plan.js  repo.js  review.js  round.js  router.js  session.js  sse.js
apps/multi-repo-workspace/tests/: conftest.py  smoke.sh
apps/multi-repo-workspace/tests/api/: test_server.py
apps/multi-repo-workspace/tests/unit/: test_cli.py  test_costs.py  test_edge_gaps.py  test_executor.py  test_frontmatter.py  test_gitinfo.py  test_gitwrite.py  test_locks.py  test_plans.py  test_registry.py  test_rounds.py  test_sessions.py  test_tracker.py
apps/per-project-plugin-toggler/: CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
apps/per-project-plugin-toggler/docs/claude_logs/: DECISION_LOG.md
apps/per-project-plugin-toggler/docs/planning/: ITER_03.md  ITER_16.md  ITER_19.md
apps/per-project-plugin-toggler/html/: server.py  styles.css
apps/per-project-plugin-toggler/html/js/: api.js  helpers.js  render.js  theme.js
apps/per-project-plugin-toggler/tests/: smoke.ps1  smoke.sh
apps/per-project-plugin-toggler/vscode-extension/: extension.js  package-lock.json  package.json
apps/per-project-plugin-toggler/vscode-extension/webview/js/: helpers.js
apps/plugin-component-browser/: README.md  index.html  pyproject.toml  server.py  styles.css
apps/skill-browser/: README.md  index.html  pyproject.toml  server.py
apps/usage-dashboard/: CLAUDE.md  README.md  cc-statusline-dashboard-server.py  dashboard.js  dashboard_config.py  dashboard_server.py  live_statusline.py  merge.py  pyproject.toml  usage-dashboard-setup.ps1  usage-dashboard-start-once.ps1  usage-dashboard.py
apps/usage-dashboard/backend/: dashboard_config.py  dashboard_server.py  live_statusline.py  merge.py  report.py  session_stats.py
apps/usage-dashboard/css/: base.css  components.css  tokens.css
apps/usage-dashboard/js/: charts.js  format.js
apps/usage-dashboard/scripts/: usage-dashboard-setup.ps1  usage-dashboard-start-once.ps1
apps/usage-dashboard/tests/: smoke.sh
apps/usage-dashboard/web/css/: base.css  components.css  controls.css
apps/usage-dashboard/web/js/: app.js  charts.js  format.js  heatmap.js  models.js  rate-limit.js  render.js  settings.js
docs/: automation-suite.md  releasing.md  shared-plugin-logic.md
docs/ci/: ci.yml
libs/claude-plugins/: CLAUDE.md  README.md  pyproject.toml
libs/claude-plugins/src/claude_plugins/: __init__.py  members.py  plugins.py
libs/claude-plugins/tests/: test_members.py  test_plugins.py
libs/claude-usage/: CLAUDE.md  README.md  pyproject.toml
libs/claude-usage/src/claude_usage/: __init__.py  pricing.py  sessions.py
libs/claude-usage/tests/: test_pricing.py  test_sessions.py
reference/claude-automation/: README.md
reference/claude-code-plugin-toggler/: CHANGELOG.md  CLAUDE.md
reference/claude-code-scheduler/: .gitignore  LICENSE  README.md  setup.ps1
setup/: CLAUDE.md  README.md  command-center.config.example.jsonc  command-center.ps1  registry.ps1
tools/claude-md-devcontainer-sync/: README.md  cc-sync-claude-md-and-claude-devcontainer-md-setup.ps1
tools/claude-md-sync/: README.md  claude-md-sync-hidden.vbs  claude-md-sync-setup.ps1  claude-md-sync.ps1
tools/file-sync/: CLAUDE.md  README.md  claude-md-sync-setup.ps1  hidden.vbs  settings-sync-setup.ps1  sync-engine.ps1  sync-setup.ps1
tools/scheduled-automations/: CHANGELOG.md  setup.sh
tools/scheduled-session-digests/: CLAUDE.md  README.md  setup.ps1  setup.sh
tools/session-name-date-prefixer/: CLAUDE.md  README.md  cc_inject_date_to_session_name_setup.sh  session-name-date-prefixer-setup.ps1  session-name-date-prefixer-setup.sh
tools/settings-devcontainer-sync/: cc-sync-claude-settings-and-claude-devcontainer-settings-setup.ps1  cc-sync-claude-settings-and-claude-devcontainer-settings.ps1
tools/settings-sync/: README.md  settings-sync-hidden.vbs  settings-sync-setup.ps1  settings-sync.ps1
tools/statusline-cost-dashboard/: README.md  pyproject.toml  statusline.sh
tools/statusline-cost-dashboard/cc-statusline-dashboard-server/: cc-statusline-dashboard-server-start-once.ps1  dashboard.css  dashboard.js
tools/statusline-hook/: CLAUDE.md  README.md  pyproject.toml  statusline-hook-setup.ps1  statusline-hook.ps1  statusline-hook.py  statusline-hook.sh  statusline.ps1  statusline.py
tools/statusline-hook/tests/: smoke.sh
tools/usage-report/: CLAUDE.md  README.md  pyproject.toml
tools/usage-report/src/usage_report/: __init__.py  cli.py
tools/usage-report/tests/: smoke.sh
(+158 files in other folders)
