[project]
name = "plugin-component-browser"
version = "0.1.0"
description = "Local web browser for the Claude Code skills, agents, and hooks on this machine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["claude-plugins"]

[tool.uv.sources]
claude-plugins = { path = "../../libs/claude-plugins", editable = true }

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=1.11",
]

# Run directly (uv run python server.py); not installed as a package.
[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
