[project]
name = "usage-dashboard"
version = "0.1.0"
description = "Local web dashboard for Claude Code token usage, cost, and rate limits."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["claude-usage"]

[tool.uv.sources]
claude-usage = { path = "../../libs/claude-usage", editable = true }

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=1.11",
]

# Run as scripts, not installed as a package.
[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
