[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-plugins"
version = "0.1.0"
description = "Read Claude Code's installed plugins, skills, agents, and hooks from local config."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/claude_plugins"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=claude_plugins --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
branch = true
source = ["claude_plugins"]
