[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-usage"
version = "0.1.0"
description = "Read Claude Code's local session transcripts into per-session token/cost data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/claude_usage"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
