[project]
name = "statusline-cost-dashboard"
version = "0.1.0"
description = "Terminal statusline hook and live token/cost dashboard for Claude Code sessions."
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=1.11",
]

# Run as scripts, not installed as a package.
[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
